--- a/scripts/requirements.txt
+++ b/scripts/requirements.txt
@@ -1,7 +1,8 @@
 # Core ML libraries
 torch>=2.0.0
-transformers>=4.35.0
+transformers>=4.57.1
 accelerate>=0.24.0
+Pillow>=9.1.0
 
 # Data handling
 datasets
