--- a/scripts/requirements.txt
+++ b/scripts/requirements.txt
@@ -4,6 +4,12 @@ transformers>=4.57.1
 accelerate>=0.24.0
 Pillow>=9.1.0
 
+# Fine-tuning libraries
+unsloth[colab-new] @ git+https://github.com/unslothai/unsloth.git
+trl>=0.7.0
+peft>=0.7.0
+bitsandbytes>=0.41.0
+
 # Data handling
 datasets
 requests
